# wikiart-scraper

./: .gitignore  Makefile  NEWS.rst  README.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml
pyboot/: app.py
scripts/: makefile-parser.js  rename-project.js
tests/: calculator_test.py
wikiart_scraper/: app.py  checklist_prompt.py  radiolist_prompt.py
